# drafter

./: .gitignore  AGENTS.md  Cargo.toml  README.md
docs/: ARCHITECTURE.md  HANDOFF.md  troubleshooting-word-navigation.md  typing-behavior-requirements.md
docs/tasks/: 2026-01-04-llm-phrase-alternatives-openrouter.md  2026-01-05-console-trace.md  2026-01-06-word-nav-profiles.md  2026-01-11-wayland-seat-selection.md  2026-01-16-x11-backend-design.md
src/: keyboard.rs  keymap.rs  lib.rs  llm.rs  main.rs  model.rs  planner.rs  playback.rs  protocols.rs  sim.rs  trace.rs  word_nav.rs  word_nav_profile.rs
src/playback/: AGENTS.md  mod.rs  util.rs
src/playback/backends/: mod.rs  wayland.rs  x11.rs
tests/: llm_validation.rs  openrouter_live_smoke.rs  planner_phrase_alternatives.rs  planner_roundtrip.rs  playback_backend_selection.rs  sim_ctrl_word_nav.rs  trace_console.rs  word_nav.rs  word_nav_profiles.rs
