[package]
name = "drafter"
version = "0.1.0"
edition = "2021"

[features]
default = ["wayland", "x11"]
# Remote LLM integration (off by default)
llm = ["dep:dotenvy", "dep:futures-util", "dep:async-openai", "dep:tokio"]
# X11 playback backend (enabled by default)
x11 = ["dep:x11rb"]
# Wayland playback backend (enabled by default)
wayland = ["dep:memfd", "dep:wayland-backend", "dep:wayland-client", "dep:wayland-scanner"]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.23", features = ["derive"] }
ctrlc = "3.4.5"
dotenvy = { version = "0.15.7", optional = true }
futures-util = { version = "0.3.31", optional = true }
memfd = { version = "0.6.4", optional = true }
async-openai = { version = "0.32.2", features = ["chat-completion"], optional = true }
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "time"], optional = true }
wayland-backend = { version = "0.3.12", optional = true }
wayland-client = { version = "0.31.7", optional = true }
wayland-scanner = { version = "0.31.8", optional = true }
xkbcommon = "0.9.0"
x11rb = { version = "0.13.2", optional = true, default-features = false, features = ["xtest"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
